--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Berenjena 🍆</h1>
+    <a href="/contact.html">Contact me!</a>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo dolores voluptate impedit est eos! Eveniet sapiente quisquam nulla recusandae maiores veritatis deserunt, nam aliquid, corrupti velit, laudantium voluptates id praesentium?</p>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo dolores voluptate impedit est eos! Eveniet sapiente quisquam nulla recusandae maiores veritatis deserunt, nam aliquid, corrupti velit, laudantium voluptates id praesentium?</p>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo dolores voluptate impedit est eos! Eveniet sapiente quisquam nulla recusandae maiores veritatis deserunt, nam aliquid, corrupti velit, laudantium voluptates id praesentium?</p>
